tests/compilation/examples/fail_span_slice_help.stderr
error: failed
 --> tests/compilation/examples/fail_span_slice_help.rs:3:1
  |
3 | #[error]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `error` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: warning
  --> tests/compilation/examples/fail_span_slice_help.rs:10:1
   |
10 | span_slice_help!(help1 help2);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: help with multiple spans
  --> tests/compilation/examples/fail_span_slice_help.rs:10:18
   |
10 | span_slice_help!(help1 help2);
   |                  ^^^^^ ^^^^^
note: this warning originates from the macro invocation here
  --> tests/compilation/examples/fail_span_slice_help.rs:10:1
   |
10 | span_slice_help!(help1 help2);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this warning originates in the macro `span_slice_help` (in Nightly builds, run with -Z macro-backtrace for more info)
